2 Local Kubernetes/manifests/client-load-balancer-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-service
  namespace: aline
spec:
  type: LoadBalancer
  selector:
    aline.component: client
    app: landing
  ports:
    - protocol: TCP
      name: landing
      port: 80
      targetPort: 4200
---
apiVersion: v1
kind: Service
metadata:
  name: member-service
  namespace: aline
spec:
  type: LoadBalancer
  selector:
    aline.component: client
    app: member
  ports:
    - protocol: TCP
      name: member
      port: 80
      targetPort: 3007
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: aline
spec:
  type: LoadBalancer
  selector:
    aline.component: client
    app: admin
  ports:
    - protocol: TCP
      name: admin
      port: 80
      targetPort: 3000
