2 Local Kubernetes/manifests/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: aline
spec:
  # tls:
  # - hosts:
  #   - alinefinancial.com
  #   secretName: aline-tls-secret
  rules:
    - host: alinefinancial.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing-port
                port:
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 8080
