2 Local Kubernetes/manifests/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: account-ingress
spec:
  rules:
  - host: alinefinancial.com
    http:
      paths:
      - pathType: Prefix
        path: "/account"
        backend:
          service:
            name: account-service
            port: 
              number: 8072
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
spec:
  rules:
  - host: alinefinancial.com
    http:
      paths:
      - pathType: Prefix
        path: "/bank"
        backend:
          service:
            name: bank-service
            port: 
              number: 8083
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: card-ingress
spec:
  rules:
  - host: alinefinancial.com
    http:
      paths:
      - pathType: Prefix
        path: "/card"
        backend:
          service:
            name: card-service
            port: 
              number: 8084
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transaction-ingress
spec:
  rules:
  - host: alinefinancial.com
    http:
      paths:
      - pathType: Prefix
        path: "/transaction"
        backend:
          service:
            name: transaction-service
            port: 
              number: 8073
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: underwriter-ingress
spec:
  rules:
  - host: alinefinancial.com
    http:
      paths:
      - pathType: Prefix
        path: "/underwriter"
        backend:
          service:
            name: underwriter-service
            port: 
              number: 8071
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
spec:
  rules:
  - host: alinefinancial.com
    http:
      paths:
      - pathType: Prefix
        path: "/user"
        backend:
          service:
            name: user-service
            port: 
              number: 8070
